Vertical alignment revisited - fixed

--- a/src/app/tl-header/tl-header.component.scss
+++ b/src/app/tl-header/tl-header.component.scss
@@ -37,7 +37,7 @@
         padding: 9px 12px;
         text-align: center;
         font-size: 14px;
-        line-height: 2;
+        margin-top: 4px;
       }
 
       .wvr-button:focus {
